Make `gn refs` look at script files.

Currently, `gn refs` would not look at the script files listed in
action() and action_foreach() targets, so, for example
`gn refs out/Default //tools/grit/grit.py` would return no references.
This (a) is obviously incorrect, and (b) meant that analyze would
not handle this case correctly and compiles would get skipped as a result.

R=brettw@chromium.org
BUG=627667

Review-Url: https://codereview.chromium.org/2164773002
Cr-Commit-Position: refs/heads/master@{#406368}

Former-commit-id: aca08753b705ef13f334c9f0aee6d44c217e4ad6